--- a/src/app/features/dashboard/profile/pages/distinctions/distinctions.component.html
+++ b/src/app/features/dashboard/profile/pages/distinctions/distinctions.component.html
@@ -1,5 +1,5 @@
 <div class="distinctions-container">
-    <app-intro-card title="Distinciones y Premios"
+    <app-intro-card cardTitle="Distinciones y Premios"
         subtitle="Registra los reconocimientos, honores y premios otorgados por instituciones académicas o científicas para validar tu excelencia profesional.">
         <button class="btn-action btn-outline" (click)="openAddModal()">
             <span class="plus">+</span>
@@ -39,7 +39,7 @@
                             <td>{{ item.nombre }}</td>
                             <td>{{ item.descripcion }}</td>
                             <td>{{ item.nombreInstitucion }}</td>
-                            <td>{{ item.fechaReconocimiento | date:'dd/MM/yyyy' }}</td>
+                            <td>{{ item.fechaReconocimiento | dateDisplay }}</td>
                             <td>
                                 <a href="javascript:void(0)" class="link-action" (click)="viewFile(item)">Ver
                                     archivos</a>
@@ -131,10 +131,14 @@
                 <div class="form-group">
                     <label>Fecha de Reconocimiento *</label>
                     <input type="date" formControlName="date"
-                        [class.invalid]="distinctionForm.get('date')?.invalid && distinctionForm.get('date')?.touched">
+                        [class.invalid]="distinctionForm.get('date')?.invalid && distinctionForm.get('date')?.touched"
+                        [max]="today">
                     <div class="error-msg"
                         *ngIf="distinctionForm.get('date')?.invalid && distinctionForm.get('date')?.touched">
-                        <small style="color:red;">La fecha es obligatoria.</small>
+                        <small *ngIf="distinctionForm.get('date')?.hasError('required')" style="color:red;">La fecha es
+                            obligatoria.</small>
+                        <small *ngIf="distinctionForm.get('date')?.hasError('futureDate')" style="color:red;">La fecha
+                            no puede ser mayor a hoy.</small>
                     </div>
                 </div>
             </div>
