--- a/src/app/features/dashboard/profile/pages/education/education.component.html
+++ b/src/app/features/dashboard/profile/pages/education/education.component.html
@@ -58,7 +58,7 @@
                 <table class="custom-table">
                     <thead>
                         <tr>
-                            <th>Código</th>
+                            <th>N°</th>
                             <th>Centro de estudios</th>
                             <th>Grado obtenido</th>
                             <th>Título</th>
@@ -71,17 +71,17 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of educationList; let i = index">
-                            <td>{{ item.code }}</td>
+                            <td>{{ i + 1 }}</td>
                             <td>{{ item.institution }}</td>
                             <td>{{ item.degreeType }}</td>
                             <td>{{ item.titleName }}</td>
-                            <td>{{ item.startDate | date:'dd/MM/yyyy' }}</td>
-                            <td>{{ item.endDate | date:'dd/MM/yyyy' }}</td>
+                            <td>{{ item.startDate | dateDisplay }}</td>
+                            <td>{{ item.endDate | dateDisplay }}</td>
                             <td><a href="javascript:void(0)" class="link-view"
                                     (click)="openFileViewer(item, ACADEMIC_SECTION)">Ver archivos</a></td>
                             <td class="text-center">
                                 <span *ngIf="item.isSunedu" class="sunedu-badge">SUNEDU</span>
-                                <span *ngIf="!item.isSunedu">-</span>
+                                <span *ngIf="!item.isSunedu" class="manual-text">MANUAL</span>
                             </td>
                             <td class="actions">
                                 <app-action-buttons (edit)="editEducation(item)"
@@ -107,7 +107,7 @@
                 <table class="custom-table">
                     <thead>
                         <tr>
-                            <th>Código</th>
+                            <th>N°</th>
                             <th>Centro de estudios</th>
                             <th>Carrera</th>
                             <th>Fecha inicio</th>
@@ -118,11 +118,11 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of technicalList; let i = index">
-                            <td>{{ item.code }}</td>
+                            <td>{{ i + 1 }}</td>
                             <td>{{ item.institution }}</td>
                             <td>{{ item.career }}</td>
-                            <td>{{ item.startDate | date:'dd/MM/yyyy' }}</td>
-                            <td>{{ item.endDate | date:'dd/MM/yyyy' }}</td>
+                            <td>{{ item.startDate | dateDisplay }}</td>
+                            <td>{{ item.endDate | dateDisplay }}</td>
                             <td><a href="javascript:void(0)" class="link-view"
                                     (click)="openFileViewer(item, TECHNICAL_SECTION)">Ver archivos</a></td>
                             <td class="actions">
@@ -151,7 +151,7 @@
                 <table class="custom-table">
                     <thead>
                         <tr>
-                            <th>Código</th>
+                            <th>N°</th>
                             <th>Centro de estudios</th>
                             <th>Carrera</th>
                             <th>Tipo de estudios</th>
@@ -162,11 +162,11 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of inProgressList; let i = index">
-                            <td>{{ item.code }}</td>
+                            <td>{{ i + 1 }}</td>
                             <td>{{ item.institution }}</td>
                             <td>{{ item.courseName }}</td>
                             <td>{{ item.studyType }}</td>
-                            <td>{{ item.startDate | date:'dd/MM/yyyy' }}</td>
+                            <td>{{ item.startDate | dateDisplay }}</td>
                             <td><a href="javascript:void(0)" class="link-view"
                                     (click)="openFileViewer(item, IN_PROGRESS_SECTION)">Ver archivos</a></td>
                             <td class="actions">
@@ -198,7 +198,7 @@
                 <table class="custom-table">
                     <thead>
                         <tr>
-                            <th>Código</th>
+                            <th>N°</th>
                             <th>Centro de estudios</th>
                             <th>Capacitación</th>
                             <th>Frecuencia</th>
@@ -210,12 +210,12 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of complementaryList; let i = index">
-                            <td>{{ item.code }}</td>
+                            <td>{{ i + 1 }}</td>
                             <td>{{ item.institution }}</td>
                             <td>{{ item.courseName }}</td>
                             <td>{{ item.measureUnit }}</td>
                             <td>{{ item.totalHours }}</td>
-                            <td>{{ item.startDate | date:'dd/MM/yyyy' }}</td>
+                            <td>{{ item.startDate | dateDisplay }}</td>
                             <td><a href="javascript:void(0)" class="link-view"
                                     (click)="openFileViewer(item, COMPLEMENTARY_SECTION)">Ver archivos</a></td>
                             <td class="actions">
@@ -301,19 +301,25 @@
             <div class="form-group">
                 <label>Fecha de Inicio <span class="required">*</span></label>
                 <input type="date" formControlName="startDate" class="form-input"
-                    [class.is-invalid]="educationForm.get('startDate')?.invalid && educationForm.get('startDate')?.touched">
+                    [class.is-invalid]="educationForm.get('startDate')?.invalid && educationForm.get('startDate')?.touched"
+                    [max]="educationForm.get('endDate')?.value || today">
                 <span class="error-message"
                     *ngIf="educationForm.get('startDate')?.invalid && educationForm.get('startDate')?.touched">
-                    Este campo es requerido.
+                    <span *ngIf="educationForm.get('startDate')?.hasError('required')">Este campo es requerido.</span>
+                    <span *ngIf="educationForm.get('startDate')?.hasError('futureDate')">La fecha no puede ser mayor a
+                        hoy.</span>
                 </span>
             </div>
             <div class="form-group">
                 <label>Fecha de Fin / Obtención <span class="required">*</span></label>
                 <input type="date" formControlName="endDate" class="form-input"
-                    [class.is-invalid]="educationForm.get('endDate')?.invalid && educationForm.get('endDate')?.touched">
+                    [class.is-invalid]="educationForm.get('endDate')?.invalid && educationForm.get('endDate')?.touched"
+                    [min]="educationForm.get('startDate')?.value" [max]="today">
                 <span class="error-message"
                     *ngIf="educationForm.get('endDate')?.invalid && educationForm.get('endDate')?.touched">
-                    Este campo es requerido.
+                    <span *ngIf="educationForm.get('endDate')?.hasError('required')">Este campo es requerido.</span>
+                    <span *ngIf="educationForm.get('endDate')?.hasError('futureDate')">La fecha no puede ser mayor a
+                        hoy.</span>
                 </span>
             </div>
         </div>
@@ -346,10 +352,11 @@
             <table class="import-table">
                 <thead>
                     <tr>
-                        <th class="w-10">Seleccionar</th>
-                        <th class="w-30">Centro de estudios</th>
-                        <th class="w-40">Grado / Título</th>
-                        <th class="w-20">Grado Obtenido</th>
+                        <th style="width: 5%">Seleccionar</th>
+                        <th style="width: 25%">Centro de estudios</th>
+                        <th style="width: 30%">Grado Obtenido</th>
+                        <th style="width: 20%">Fecha de Inicio</th>
+                        <th style="width: 20%">Fecha Fin / Obtención</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -363,7 +370,14 @@
                         </td>
                         <td>{{ item.institution }}</td>
                         <td>{{ item.degree }}</td>
-                        <td>{{ item.date }}</td>
+                        <td>
+                            <input type="date" [(ngModel)]="item.startDate" class="table-input"
+                                [ngModelOptions]="{standalone: true}">
+                        </td>
+                        <td>
+                            <input type="date" [(ngModel)]="item.endDate" class="table-input"
+                                [ngModelOptions]="{standalone: true}">
+                        </td>
                     </tr>
                     <!-- Mock empty row if needed, but sunedu usually found items -->
                 </tbody>
@@ -410,19 +424,25 @@
             <div class="form-group">
                 <label>Fecha de Inicio <span class="required">*</span></label>
                 <input type="date" formControlName="startDate" class="form-input"
-                    [class.is-invalid]="technicalForm.get('startDate')?.invalid && technicalForm.get('startDate')?.touched">
+                    [class.is-invalid]="technicalForm.get('startDate')?.invalid && technicalForm.get('startDate')?.touched"
+                    [max]="technicalForm.get('endDate')?.value || today">
                 <span class="error-message"
                     *ngIf="technicalForm.get('startDate')?.invalid && technicalForm.get('startDate')?.touched">
-                    Este campo es requerido.
+                    <span *ngIf="technicalForm.get('startDate')?.hasError('required')">Este campo es requerido.</span>
+                    <span *ngIf="technicalForm.get('startDate')?.hasError('futureDate')">La fecha no puede ser mayor a
+                        hoy.</span>
                 </span>
             </div>
             <div class="form-group">
                 <label>Fecha de Fin / Egresado <span class="required">*</span></label>
                 <input type="date" formControlName="endDate" class="form-input"
-                    [class.is-invalid]="technicalForm.get('endDate')?.invalid && technicalForm.get('endDate')?.touched">
+                    [class.is-invalid]="technicalForm.get('endDate')?.invalid && technicalForm.get('endDate')?.touched"
+                    [min]="technicalForm.get('startDate')?.value" [max]="today">
                 <span class="error-message"
                     *ngIf="technicalForm.get('endDate')?.invalid && technicalForm.get('endDate')?.touched">
-                    Este campo es requerido.
+                    <span *ngIf="technicalForm.get('endDate')?.hasError('required')">Este campo es requerido.</span>
+                    <span *ngIf="technicalForm.get('endDate')?.hasError('futureDate')">La fecha no puede ser mayor a
+                        hoy.</span>
                 </span>
             </div>
         </div>
@@ -470,10 +490,13 @@
             <div class="form-group">
                 <label>Fecha de Inicio <span class="required">*</span></label>
                 <input type="date" formControlName="startDate" class="form-input"
-                    [class.is-invalid]="inProgressForm.get('startDate')?.invalid && inProgressForm.get('startDate')?.touched">
+                    [class.is-invalid]="inProgressForm.get('startDate')?.invalid && inProgressForm.get('startDate')?.touched"
+                    [max]="today">
                 <span class="error-message"
                     *ngIf="inProgressForm.get('startDate')?.invalid && inProgressForm.get('startDate')?.touched">
-                    Este campo es requerido.
+                    <span *ngIf="inProgressForm.get('startDate')?.hasError('required')">Este campo es requerido.</span>
+                    <span *ngIf="inProgressForm.get('startDate')?.hasError('futureDate')">La fecha no puede ser mayor a
+                        hoy.</span>
                 </span>
             </div>
         </div>
@@ -571,19 +594,26 @@
             <div class="form-group">
                 <label>Fecha de Inicio <span class="required">*</span></label>
                 <input type="date" formControlName="startDate" class="form-input"
-                    [class.is-invalid]="complementaryForm.get('startDate')?.invalid && complementaryForm.get('startDate')?.touched">
+                    [class.is-invalid]="complementaryForm.get('startDate')?.invalid && complementaryForm.get('startDate')?.touched"
+                    [max]="complementaryForm.get('endDate')?.value || today">
                 <span class="error-message"
                     *ngIf="complementaryForm.get('startDate')?.invalid && complementaryForm.get('startDate')?.touched">
-                    Este campo es requerido.
+                    <span *ngIf="complementaryForm.get('startDate')?.hasError('required')">Este campo es
+                        requerido.</span>
+                    <span *ngIf="complementaryForm.get('startDate')?.hasError('futureDate')">La fecha no puede ser mayor
+                        a hoy.</span>
                 </span>
             </div>
             <div class="form-group">
                 <label>Fecha de fin <span class="required">*</span></label>
                 <input type="date" formControlName="endDate" class="form-input"
-                    [class.is-invalid]="complementaryForm.get('endDate')?.invalid && complementaryForm.get('endDate')?.touched">
+                    [class.is-invalid]="complementaryForm.get('endDate')?.invalid && complementaryForm.get('endDate')?.touched"
+                    [min]="complementaryForm.get('startDate')?.value" [max]="today">
                 <span class="error-message"
                     *ngIf="complementaryForm.get('endDate')?.invalid && complementaryForm.get('endDate')?.touched">
-                    Este campo es requerido.
+                    <span *ngIf="complementaryForm.get('endDate')?.hasError('required')">Este campo es requerido.</span>
+                    <span *ngIf="complementaryForm.get('endDate')?.hasError('futureDate')">La fecha no puede ser mayor a
+                        hoy.</span>
                 </span>
             </div>
         </div>
