--- a/src/app/shared/components/intro-card/intro-card.component.html
+++ b/src/app/shared/components/intro-card/intro-card.component.html
@@ -1,6 +1,6 @@
 <div class="card intro-card">
     <div class="intro-section">
-        <h2>{{ title }}</h2>
+        <h2>{{ cardTitle }}</h2>
         <p>{{ subtitle }}</p>
     </div>
 
