--- a/src/app/features/dashboard/profile/pages/identity-validation/identity-validation.component.html
+++ b/src/app/features/dashboard/profile/pages/identity-validation/identity-validation.component.html
@@ -224,6 +224,15 @@
             </div>
 
             <div class="form-actions">
+                <span class="help-info-icon"
+                    data-tooltip="Al presionar el botón, usted autoriza al CONCYTEC a actualizar sus datos personales con los que figuran en la base de datos del RENIEC.">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="10"></circle>
+                        <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path>
+                        <line x1="12" y1="17" x2="12.01" y2="17"></line>
+                    </svg>
+                </span>
                 <button type="button" class="btn btn-save" (click)="validateReniec()"
                     [disabled]="isValidatingReniec || currentUserData?.validado">
                     <span *ngIf="isValidatingReniec" class="spinner-border spinner-border-sm me-2" role="status"
