--- a/src/app/layout/dashboard-layout/components/header/header.component.scss
+++ b/src/app/layout/dashboard-layout/components/header/header.component.scss
@@ -101,12 +101,29 @@
         background-color: rgba(255, 255, 255, 0.1);
     }
 
-    .avatar img {
+    .avatar {
         width: 36px;
         height: 36px;
         border-radius: 50%;
-        object-fit: cover;
+        overflow: hidden;
+        background-color: #BAE6FD;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         border: 2px solid rgba(255, 255, 255, 0.2);
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .initials {
+            font-size: 0.85rem;
+            font-weight: 700;
+            color: #0369A1;
+            text-transform: uppercase;
+        }
     }
 
     .user-info {
